--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: 'polentical neon';
 }
 
 html,
@@ -24,8 +25,77 @@ body {
 
 .contentForm{
 	position: absolute;
+	width: 20%;
+	left: 42%;
+	top: 40%;
+	display:block;
+}
+
+.contentForm .name, .contentForm .password, .contentForm .input, .contentForm .label{
+	float:left;
+	width:100%;
+}
+
+.contentForm input{
+	height: 44px;
+	border: 1px solid #eeeded;
+	border-radius: 10px;
+	font-size: 16px;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
+.contentForm h3{
+	margin: 0;
+	font-size:34px;
+}
+.contentForm .name, .contentForm .password{
+	font-size:22px;
+	margin-top:5px;
+}
+
+.contentForm .password .label{
+	width:30%;
+}
+
+.contentForm .forgot{
 	width: 70%;
-	left: 5%;
-	top: 5%;
-	display:none;
+	padding-top: 8px;
+	float: right;
+}
+
+.contentForm .forgot p{
+	margin:0;
+	font-size:16px;
+	float: right;
+}
+.contentForm .forgot p{
+	text-decoration:none;
+	color:#FFFFFF;
+}
+.contentForm .enterContent{
+	width: 100%;
+	float: left;
+	margin-top: 20px;
+}
+
+.contentForm .enterContent .button{
+	width: 100%;
+	float: right;
+}
+.contentForm .button a{
+	float:right;
+/*	border-radius: 10px;
+	font-size: 16px;
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	background-color: #EEEEEE;
+	color: #a23916;
+	padding: 15px 40px;*/
+}
+
+.img-responsive {
+	max-width: 100%;	
+
 }
