--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 	position: absolute;
 	width: 20%;
 	left: 42%;
-	top: 40%;
+	top: 34%;
 	display:block;
 }
 
@@ -40,7 +40,7 @@ body {
 	height: 44px;
 	border: 1px solid #eeeded;
 	border-radius: 10px;
-	font-size: 16px;
+	font-size: 24px;
 	padding: 0;
 	margin: 0;
 	width: 100%;
@@ -98,4 +98,15 @@ body {
 .img-responsive {
 	max-width: 100%;	
 
+}
+
+
+/* mediaquery */
+@media screen and (max-width: 1024px){
+	.contentForm {
+		position: absolute;
+		width: 26%;
+		left: 35%;
+		display: block;
+	}
 }
