--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,14 @@ body {
 
 }
 
+.logged{
+	margin: 0;
+	height: 100%;
+	height: 1243px;
+	background: url(../images/logged.jpg) no-repeat center center;
+	background-size: cover;
+}
+
 
 /* mediaquery */
 @media screen and (max-width: 1024px){
