--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ body {
 	display: none;
     background: url(../images/background.png) no-repeat;
     background-size: cover;
+    
+    left: 100%;
+    transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
 }
 
 .header {
