--- a/css/main.css
+++ b/css/main.css
@@ -154,19 +154,15 @@ body {
 	text-decoration: none;
 }
 
-progress{
+.progressBar {
+	display: none;
 	position: fixed;
-	bottom: 10%;
-}
-
-progress:not([value]) {
-  width: 100%;
-  height: 3px;
-}
-
-progress[value] {
-  width: 100%;
-  height: 3px;
+	top: 0;
+	left: 0;
+	width: 0%;
+	height: 2px;
+	background: #29d;
+	z-index: 1031;
 }
 
 .vjs-error-display, .vjs-control-bar {
