--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,22 @@ body {
     z-index: 0;
 	display: none;
     background-size: cover;
-    
-    left: 100%;
+    right: 100%;
+    transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+
+.backgroundImage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+	display: none;
+	background: url(../images/background.png) no-repeat;
+    background-size: cover;
+    right: 100%;
     transition-property: all;
 	transition-duration: .5s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
@@ -146,7 +160,6 @@ body {
 	left: 5%;
 	bottom: 6%;
 }
-
 .skip a {
 	text-transform: uppercase;
 	color: #856654;
