--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,11 @@ body {
 	height: 53px;
 	border: 1px solid #eeeded;
 	border-radius: 10px;
-	font-size: 24px;
-	padding: 0;
 	margin: 0;
 	width: 100%;
+	outline: none;
+	font-size: 20px;
+	padding: 0 6px;
 }
 
 .contentForm .name, .contentForm .password {
